Trying to fix safari animation and making components larger on mobile

--- a/src/styles/github-readme-builder.scss
+++ b/src/styles/github-readme-builder.scss
@@ -133,7 +133,7 @@ html {
 
     &--Object {
       max-height: 600px;
-      width: 400px;
+      width: 100%;
       object-fit: contain;
       border-radius: 5px;
       margin-top: 80px;
@@ -188,10 +188,10 @@ html {
     &--Preview {
       margin-top: 40px;
       margin-bottom: 40px;
-
+      width: 100%;
+  
       &--Object {
         width: 100%;
-        object-fit: contain;
       }
     }
   }
